--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "eject-disc",
   "version": "1.0.0",
-  "description": "Cross-platform tool to eject media from the Optical Drive",
+  "description": "Cross-platform tool to eject an optical disc",
   "main": "lib/index.js",
   "scripts": {
+    "build": "grunt build",
+    "docs": "grunt docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -16,5 +18,6 @@
     "typescript": "^3.0.3"
   },
   "author": "Zachary Boyd <zachary@zacharyboyd.nyc>",
-  "license": "LGPL-3.0-only"
+  "license": "MIT",
+  "dependencies": {}
 }
